--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interactive Resume - Amber</title>
+<title>Interactive Resume - Anshuman</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 			<img src="headshot.jpg" alt="Your Name" class="resume-headshot">
 		</div>
 		<div class="contact-info">
-			<h1>Amber</h1>
+			<h1>Anshuman</h1>
 			<p>Planet Earth | email@example.com</p>
 		</div>
 	</div>
